--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
 		"firebase": "^8.2.1",
 		"firebase-admin": "^9.4.2",
 		"google-auth-library": "^6.1.3",
-		"mongoose": "^5.11.9"
+		"logdna-winston": "^3.0.4",
+		"mongoose": "^5.11.9",
+		"winston": "^3.3.3"
 	},
 	"devDependencies": {
 		"@babel/cli": "^7.12.10",
