--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 	"author": "Akash Mohan",
 	"license": "ISC",
 	"dependencies": {
+		"@sentry/node": "^6.2.3",
 		"axios": "^0.21.1",
 		"cors": "^2.8.5",
 		"express": "^4.17.1",
