--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
 		"dev": "nodemon --exec npm run restart",
 		"restart": "rimraf dist && npm run build && npm start",
 		"start": "node --require dotenv/config ./dist/index.js",
-		"test": "echo \"Error: no test specified\" && exit 1",
+		"test": "jest",
+		"test:watch": "jest --watch",
 		"lint": "eslint --ignore-path .gitignore \"**/*.js\"",
 		"prettier": "prettier --ignore-path .gitignore \"**/*.+(js|json)\"",
 		"check-format": "npm run prettier -- --list-different",
@@ -34,10 +35,13 @@
 		"@babel/core": "^7.12.10",
 		"@babel/eslint-parser": "^7.13.10",
 		"@babel/preset-env": "^7.12.11",
+		"@types/jest": "^26.0.22",
 		"dotenv": "^8.2.0",
 		"eslint": "^7.22.0",
 		"eslint-config-prettier": "^8.1.0",
+		"eslint-plugin-jest": "^24.3.2",
 		"husky": "^4.3.8",
+		"jest": "^26.6.3",
 		"lint-staged": "^10.5.4",
 		"morgan": "^1.10.0",
 		"nodemon": "^2.0.6",
@@ -55,9 +59,13 @@
 		"env": {
 			"node": true
 		},
+		"plugins": [
+			"jest"
+		],
 		"extends": [
 			"eslint:recommended",
-			"prettier"
+			"prettier",
+			"plugin:jest/recommended"
 		],
 		"parser": "@babel/eslint-parser",
 		"parserOptions": {
