--- a/package.json
+++ b/package.json
@@ -58,7 +58,8 @@
 	"eslintConfig": {
 		"root": true,
 		"env": {
-			"node": true
+			"node": true,
+			"es6": true
 		},
 		"plugins": [
 			"jest"
