add inspect scripts to package.json

--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
 		"dev": "nodemon --exec npm run restart",
 		"restart": "rimraf dist && npm run build && npm start",
 		"start": "node --require dotenv/config ./dist/index.js",
+		"dev:inspect": "nodemon --exec npm run restart:inspect",
+		"restart:inspect": "rimraf dist && npm run build && npm run start:inspect",
+		"start:inspect": "node --inspect --require dotenv/config ./dist/index.js",
 		"test": "jest",
 		"test:watch": "jest --watch",
 		"lint": "eslint --ignore-path .gitignore \"**/*.js\"",
